# PDF-para-EXCEL

./: README.md  main.py  pyproject.toml  tratamento.py
