[project]
name = "word-para-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "document>=1.0",
    "fitz>=0.0.1.dev2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pyinstaller>=6.16.0",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "ttkbootstrap>=1.14.2",
]
